mobile-web: Fix colorpicker popover not being responsive
The colorpicker popover that shows up when attempting to change the stream color overflows from the screen when the device size
is approximately 500px or lower. This has been fixed using a media query and setting the popover to display: flex

--- a/static/styles/popovers.scss
+++ b/static/styles/popovers.scss
@@ -66,6 +66,10 @@
         display: none;
         margin-right: 10px;
 
+        @media (max-width: 485px) {
+            display: flex;
+        }
+
         .sp-container {
             background-color: hsl(0, 0%, 100%);
             cursor: pointer;
